--- a/PROJECT-USING-CSS3-HTML5/index.html
+++ b/PROJECT-USING-CSS3-HTML5/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<main id="main">
+
+    <body>
+
+        <h1 id="title"><STRONG><u>Albert Camus</u></STRONG></h1>
+        <h3 id="subhead">The famous Absurdist</h3>
+        <div id="img-div">
+            <img id="image"
+                src="https://media.gettyimages.com/photos/on-17-october-1957-the-writer-albert-camus-receives-the-nobel-prize-picture-id154571037?s=594x594">
+            <h4 id="img-caption">On 17 october 1957 the writer albert camus receives the nobel prize
+            </h4>
+        </div>
+        </figure>
+        <hr>
+        <div>
+            <h2 id="tribute-info"><b><strong>Timeline of Albert Camus's life</strong></b></h2>
+            <ul class="pagecontent">
+                <li><strong>1913</strong>- Albert Camus was born in a working-class neighbourhood in Mondovi, in French
+                    Algeria. </li>
+                <li><strong>1930</strong> - Diagnosed with tuberculosis. </li>
+                <li><strong>1933</strong> - Camus enrolled at the University of Algiers and completed his licence de
+                    philosophie (BA) in 1936</li>
+                <li><strong>1934</strong> - Camus was in a relationship with Simone Hié, later married her and divorced
+                    her cause of an affair she had with her personal doctor</li>
+                <li><strong>1935</strong>- Joined French Communist Party. Camus left the FCP after a year.</li>
+                <li><strong>1936</strong> - The independence-minded Algerian Communist Party (PCA) was founded, and
+                    Camus joined it after his mentor Grenier advised him to do so.His main role was to organise
+                    <i>Théâtre du Travail</i> (Worker's Theatre) which he later renamed to <i>Théâtre de l'Equipe</i>
+                    ("Theatre of the Team").</li>
+                <li><strong>1938</strong> - Began working for a leftist newspaper <i>Alger républicain</i>(founded by
+                    Pascal Pia) as he had strong anti-fascist feelings, and the rise of fascist regimes in Europe was
+                    worrying him.</li>
+                <li><strong>1940</strong> - Camus flew to Paris, took a new job as editor-in-chief he almost completed
+                    his "first cycle" of works dealing with the absurd and the meaningless—the novel <i>L'Étranger (The
+                        Outsider (UK)</i>, or <i>The Stranger (US)</i>, the philosophical essay <i>Le Mythe de Sisyphe
+                        (The Myth of Sisyphus)</i> and the play <i>Caligula</i>. Each cycle consisted of a novel, an
+                    essay and a theatrical play. Soon after he moved, outbreak of World War II began to affect France.
+                    Married a pianist Francine Faure on 3 December 1940 and flew back to Algeria where he taught in
+                    primary schools and began working on his second cycle of works.</li>
+                <li><strong>1943</strong> - By he was known because of his earlier work. He returned to Paris where he
+                    met and became friends with Jean-Paul Sartre. He also became part of a circle of intellectuals
+                    including Simone de Beauvoir, André Breton, and others.</li>
+                <li.<strong>1944</strong> - He founded <i>the Comité français pour la féderation européenne</i>—(CFFE
+                    (French Committee for the European Federation))—declaring that Europe "can only evolve along the
+                    path of economic progress, democracy, and peace if the nation states become a federation."
+                    <li><strong>1947-1948</strong> - He founded the <i>Groupes de Liaison Internationale</i> (GLI) a
+                        trade union movement in the context of revolutionary syndicalism (<i>syndicalisme
+                            révolutionnaire</i>). His main aim was to express the positive side of surrealism and
+                        existentialism, rejecting the negativity and the nihilism of André Breton. Camus also raised his
+                        voice against the Soviet intervention in Hungary and the totalitarian tendencies of Franco's
+                        regime in Spain.</li>
+                    <li><strong>1957</strong> - He was awarded the Nobel Prize in Literature. At age 44, he was the
+                        second-youngest recipient of the prize, after Rudyard Kipling, who was 42.</li>
+                    <li><strong>1960</strong> - Camus died on 4 January 1960 at the age of 46, in a car accident near
+                        Sens, in Le Grand Fossard in the small town of Villeblevin.</li>
+                    <p> There has been speculation that Camus was assassinated by the KGB because of his criticism of
+                        Soviet abuses.144 pages of a handwritten manuscript entitled Le premier Homme (The First Man)
+                        were found in the wreckage. Camus had predicted that this unfinished novel based on his
+                        childhood in Algeria would be his finest work. Camus was buried in the Lourmarin Cemetery,
+                        Vaucluse, France, where he had lived.His friend Sartre read a eulogy, paying tribute to Camus's
+                        heroic "stubborn humanism". William Faulkner wrote his obituary, saying, "When the door shut for
+                        him he had already written on this side of it that which every artist who also carries through
+                        life with him that one same foreknowledge and hatred of death, is hoping to do: I was here."</p>
+            </ul>
+            <hr>
+            <section id="tribute-link">If you have time, you should read more about this incredible philosopher on his <a href="https://en.wikipedia.org/wiki/Albert_Camus#Life" target="_blank"><i>Wikipedia entry</i></a>
+            </section>
+        </div>
+
+
+    </body>
+</main>
+
+</html>
