--- a/project-html-product-lading-page/index.html
+++ b/project-html-product-lading-page/index.html
@@ -1,1 +1,115 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="div1">
+        <header id="header">
+            <div class="div2">
+                <img id="header-img"
+                    src="https://cdn.dribbble.com/users/17577/screenshots/1478281/media/07303d8bedf0011d61aaf78aa7f17ff9.png?compress=1&resize=800x600">
+                <h1 id="headerh1">KONK</h1>
+            </div>
+            <nav id="nav-bar">
+                <ul>
+                    <li> <a class="nav-link" href="#features">Features</li>
+                    <li> <a class="nav-link" href="#How-It-Works">How It Works </li>
+                    <li> <a class="nav-link" href="#Pricing">Pricing </li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <section id="hero">
+        <h2>Handcrafted, Home-made, Masterpieces</h2>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+            <input type="email" id="email" name="email" placeholder="Enter your E-Mail" required>
+            <input type="submit" id="submit" value="Get Started" class="btn1">
+        </form>
+    </section>
+    <div class="container">
+        <section id="features">
+            <div class="grid">
+                <div class="desc">
+                    <img src="misc/premium.svg">
+                    <h2>Premium Hand-made Materials</h2>
+                    <p>Our furnitures use premium quality of materials which are handcrafted. This will increase the
+                        durability and longevity of the products.</p>
+                </div>
+                <div class="desc">
+                    <img src="misc/delivery.svg">
+                    <h2>Fast Shipping</h2>
+                    <p>We make sure you recieve your furniture as soon as we have finished making it. We also
+                        provide
+                        free returns if you are not satisfied.</p>
+                </div>
+                <div class="desc">
+                    <img src="misc/quality.svg">
+                    <h2>Quality Assurance</h2>
+                    <p>For every purchase you make, we will ensure there are no damages or faults and we will check the
+                        durability and quality of your furniture.</p>
+                </div>
+            </div>
+        </section>
+        <section id="How-It-Works">
+            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/i2T2g572-yY"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </section>
+        <section id="Pricing">
+            <div class="Product" id="Iron">
+                <div class="heading">IRON MATERIALS</div>
+                <h2>$600 - $800</h2>
+                <ol>
+                    <li>Bunk Beds</li>
+                    <li>Double and 4 Poster Beds</li>
+                    <li>Sofa cum Beds</li>
+                    <li>Metal theme chair</li>
+                    <li>Resturant & Cafeteria Furniture</li>
+                </ol>
+                <button class="btn">Select</button>
+            </div>
+            <div class="Product" id="Steel">
+                <div class="heading">STEEL MATERIALS</div>
+                <h2>$800 - $1000</h2>
+                <ol>
+                    <li>Double and 4 Poster Beds</li>
+                    <li>Sofa cum Beds</li>
+                    <li>Metal theme chair</li>
+                    <li>Resturant & Cafeteria Furniture</li>
+                    <li>Sofa seating and Arm chairs</li>
+                </ol>
+                <button class="btn">Select</button>
+            </div>
+            <div class="Product" id="Wood">
+                <div class="heading">WOOD MATERIALS</div>
+                <h2>$1000 - $1200</h2>
+                <ol>
+                    <li>Storage Beds</li>
+                    <li>Sofa cum Beds</li>
+                    <li>Tables & Table Base</li>
+                    <li>Single & Daybeds</li>
+                    <li>Sofa seating and Arm chairs</li>
+                </ol>
+                <button class="btn">Select</button>
+            </div>
+        </section>
+        <footer>
+            <ul id="footer2">
+                <li><a href="#">Privacy</li>
+                <li><a href="#">Terms</li>
+                <li><a href="#">Contact</li>
+            </ul>
+            <span>Copyright 2021, KONK</span>
+        </footer>
+    </div>
+</body>
+
+</html>
